# microservice.py

./: .gitignore  LICENSE  README.md
codelieche/: .gitignore  README.md  setup.cfg  setup.py
codelieche/demo/: .gitignore  README.md
codelieche/demo/apps/store/models/: book.py  email.py  todolist.py
codelieche/demo/apps/store/serializers/: book.py  email.py  todolist.py
codelieche/demo/apps/store/urls/: api.py
codelieche/demo/apps/store/views/: book.py  email.py  todolist.py
codelieche/demo/backup/apps/store/: 0001_initial.py
codelieche/demo/demo/: settings.py
codelieche/demo/demo/urls/: api_v1.py  main.py
codelieche/demo/demo/views/: index.py
codelieche/demo/store/: models.py
codelieche/demo/templates/: index.html
codelieche/src/codelieche/demo/: demo.py
codelieche/src/codelieche/django/: password.py
codelieche/src/codelieche/django/middleware/: __init__.py
codelieche/src/codelieche/django/middlewares/: csrf.py
codelieche/src/codelieche/django/modellog/: apps.py  mixins.py  urls.py
codelieche/src/codelieche/django/modellog/management/commands/: backup.py
codelieche/src/codelieche/django/modellog/models/: __init__.py  modellog.py
codelieche/src/codelieche/django/models/: base.py
codelieche/src/codelieche/django/utils/: __init__.py
codelieche/src/codelieche/django/views/: __init__.py  viewset.py
codelieche/src/codelieche/django/views/mixins/: __init__.py  batch.py  queryset.py
codelieche/src/codelieche/tools/: __init__.py  password.py
grpcdemo/: .gitignore  README.md
logs/: .gitignore  Pipfile  manage.py
(+111 files in other folders)
