[metadata]
name = codelieche
version = 0.0.1
author = codelieche
author_email = codelieche@gmail.com
description = Codelieche Python Utils Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codelieche/microservice.py/codelieche
project_urls =
    Bug Tracker = https://github.com/codelieche/microservice.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    django >= 3.0.0
    cryptography >= 36.0.0
    pycryptodome >= 3.10.0

[options.packages.find]
where = src